--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -34,6 +36,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-social-icons": "^6.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
