--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.14.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
-   
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
