--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@mui/material": "^5.14.17",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
+    "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "create-next-app": "^14.0.4",
@@ -36,6 +39,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.14.0",
     "tailwind-merge": "^2.2.1",
