--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-hook-form": "^7.51.1",
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
+    "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.14.0",
