--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@reduxjs/toolkit": "^2.2.1",
     "aos": "^3.0.0-beta.6",
     "class-variance-authority": "^0.7.0",
@@ -47,6 +49,7 @@
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.14.0",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
