--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^4.11.0",
     "react-leaflet": "^4.2.1",
     "react-pro-sidebar": "^0.7.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-social-icons": "^6.14.0",
