--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/x-data-grid": "^7.0.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
@@ -49,6 +50,7 @@
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.8.0",
     "react-social-icons": "^6.14.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
