--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-social-icons": "^6.14.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "resuite": "^0.0.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
