--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "embla-carousel-react": "^8.0.0-rc23",
     "flowbite": "^2.0.0",
     "flowbite-react": "^0.6.4",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.335.0",
     "next": "14.0.4",
